# cloud139

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.md  REPORT.md  build.rs  package.json
.agents/skills/cloud139-e2e-test/: SKILL.md
.github/workflows/: ci.yml  release.yml
.opencode/skills/cloud139-e2e-test/: SKILL.md
docs/: commands.md  dependencies.md  notes.md  scan-and-diff-bfs-review.md  structure.md  style.md
src/: main.rs
src/client/: api.rs  api_trait.rs  auth.rs  mod.rs
src/commands/: cp.rs  delete.rs  download.rs  list.rs  login.rs  mkdir.rs  mod.rs  mv.rs  other.rs  rename.rs  sync.rs  upload.rs
src/config/: mod.rs
src/models/: types.rs
src/utils/: crypto.rs  logger.rs  mod.rs
tests/: api_extended_test.rs  api_http_client_test.rs  api_mock_test.rs  api_test.rs  api_trait_test.rs  auth_test.rs  client_extended_test.rs  client_test.rs  commands_args_test_extended.rs  commands_ext_test.rs  commands_list_test.rs  commands_test.rs  config_extended_test.rs  config_test.rs  cp_mock_test.rs  cp_test.rs  delete_mock_test.rs  download_mock_test.rs  download_test.rs  http_client_test.rs  list_mock_test.rs  list_test.rs  mkdir_mock_test.rs  mkdir_test.rs  mv_mock_test.rs  rename_mock_test.rs  rename_test.rs  test_harness.rs  upload_extra_test.rs  upload_mock_test.rs  upload_test.rs  utils_extended_test.rs
tests/api_mocks/: mod.rs
