[package]
name = "cloud139"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "cookies"] }
ureq = "3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
base64 = "0.22.1"
aes = "0.8"
aes-gcm = "0.10"
sha1 = "0.11"
sha2 = "0.11"
md-5 = "0.11"
tokio = { version = "1", features = ["full"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.10"
thiserror = "2.0.18"
tokio-stream = "0.1"
futures-util = "0.3"
hex = "0.4"
regex = "1"
url = "2"
cipher = "0.5.1"
cbc = "0.1"
digest = "0.11.2"
generic-array = "1.3.5"
typenum = "1.17"
urlencoding = "2"
rand = "0.8"
async-trait = "0.1"
async-recursion = "1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde-xml-rs = "0.8"
glob-match = "0.2"
dialoguer = "0.11"
indicatif = "0.18.4"
const_format = "0.2.35"

[dev-dependencies]
tempfile = "3"
mockall = "0.14"
httpmock = "0.8"
serde_json = "1"

[[bin]]
name = "cloud139"
path = "src/main.rs"
